# The-Modern-C-Challenge

./: .gitignore  README.md
problem_01/: CMakeLists.txt  test.cpp
problem_02/: CMakeLists.txt  main.cpp
problem_03/: CMakeLists.txt  main.cpp
problem_04/: CMakeLists.txt  main.cpp
problem_05/: CMakeLists.txt  main.cpp
problem_06/: CMakeLists.txt  main.cpp
problem_14/: main.cpp
problem_15/: main.cpp
problem_16/: CMakeLists.txt  main.cpp
problem_17/: main.cpp
